Update directory structure

--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
         <!-- end of main div -->
     </div>
     <script src="./view/js/app.js "></script>
-    <script src="../js/invertedIndex.js "></script>
+    <script src="./js/invertedIndex.js "></script>
 
     <!-- Controllers -->
     <script src="./view/js/controllers/MainController.js "></script>
